[package]
name = "oss-rust-sdk"
version = "0.10.0"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/oss-rust-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"], default-features = false, optional = true }
base64 = "0.22"
log = "0.4.17"
quick-xml = { version = "0.36", features = ["serialize"] }
derive_more = {version = "1", features = ["display"] }
bytes = "1.0"
async-trait = "0.1.53"
httpdate = "1.0.2"
hmac = "0.12"
sha1 = "0.10"
serde = { version = "1.0.156", features = ["derive"] }
urlencoding = "2.1.3"
time = { version = "0.3.34", features = ["macros", "formatting"] }

[dev-dependencies]
maplit = "1.0.2"
tokio = { version = "1.1", features = ["full"] }

[features]
default = [ "native-tls" ]
native-tls = [ "reqwest/default-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
